--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -1,6 +1,17 @@
 on init
     exec u:r:recovery:s0 -- /system/bin/resetprop ro.boot.verifiedbootstate orange
 
+on boot
+    chmod 0755 /system/bin/remove-bootctrl-vintf.sh
+    start remove-bootctrl-vintf
+
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
+
+service remove-bootctrl-vintf /system/bin/remove-bootctrl-vintf.sh
+    user root
+    group root
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
