renoir: Add QTI AIDL vibrator
* Start the service only when the kernel module was fully loaded.
* Use prebuilt vendor.qti.hardware.vibrator, since for now source
  built can lead to compilation error.
* Use prebuilt libc++, since our HAL was built on a newer sdk version
  and needs the symbol which android12.1 didn't provide.
* Build dependencies from source.

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -20,10 +20,19 @@ on property:twrp.modules.loaded=true
     write /sys/kernel/boot_adsp/boot 1
     wait /sys/class/power_supply/battery
     start health-hal-2-1
+    # Vibrator
+    wait /sys/bus/platform/drivers/qcom-hv-haptics
+    start vendor.qti.vibrator
 
 service remove-bootctrl-vintf /system/bin/remove-bootctrl-vintf.sh
     user root
     group root
     disabled
     oneshot
+    seclabel u:r:recovery:s0
+
+service vendor.qti.vibrator /system/bin/hw/vendor.qti.hardware.vibrator.service
+    class hal
+    user system
+    group system input
     seclabel u:r:recovery:s0
